@@ -116,8 +116,8 @@
 #define APU_HAVE_DB     @apu_have_db@
 
 #if APU_HAVE_DB
-/* found version @db_version@ */
-#include <@db_header@>
+/* found version @apu_db_version@ */
+#include <@apu_db_header@>
 #endif
 
 
